plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/projectIsolation/multiTargetIndependentProject/libOne/src/jvmMain/kotlin/Main.kt
fun <!LINE_MARKER!>main<!>() {
    println("Running on JVM!")
    processUserInput(3.5, 2.5)
}

fun processUserInput(num1: Double, num2: Double) {
    add(num1, num2)
}
